# FW

./: CMakeLists.txt  README.md
include/: common.h  config.h  types.h
src/: main.c
src/app/: app_main.c  app_main.h  control.c  control.h  fsm.c  fsm.h  motion_profile.c  motion_profile.h  pid.c  pid.h  scheduler.c  scheduler.h
src/driver/: adc_drv.h  camera_trigger_drv.h  encoder_drv.h  motor_drv.h  timer_drv.h  uart_drv.h
src/hal/: hal_if.c  hal_if.h
src/platform/: platform_posix.c  platform_posix.h  platform_stm32g474_cubeide.c
src/service/: camera.c  camera.h  cmd_parser.c  cmd_parser.h  crc16.c  crc16.h  encoder.c  encoder.h  protection.c  protection.h  sensor.c  sensor.h  telemetry.c  telemetry.h  temp_monitor.c  temp_monitor.h
tools/: pc_send_cmd.py
